--- a/LoyatyPointEx/package.json
+++ b/LoyatyPointEx/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alumni-space-ui2",
+  "name": "Loyalty Point Exchange System",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -18,7 +18,6 @@
     "@angular/forms": "^16.2.0",
     "@angular/material": "^16.2.8",
     "@angular/platform-browser": "^16.2.0",
-    "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@fortawesome/angular-fontawesome": "^0.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
